[build-system]
requires = ["maturin>=1.3"]
build-backend = "maturin"

[project]
name = "seedler"
version = "0.0.1"
description = "A package to test for RNG seeds that satisfy conditions"
authors = [{name="Wolfer", email="DALLIN.WOLFER.OFFICIAL@GMAIL.COM"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff"
]

[tool.maturin]
module-name = "seedler.seedler_rust"
features = ["pyo3/extension-module"]
compatibility = "off"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-jupyter>=0.26.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.3",
]
